# CryptoMCP

./: .gitignore  CLOUD_DEPLOYMENT.md  CLOUD_HOSTING_STATUS.md  CODE_INSPECTION_REPORT.md  COMPREHENSIVE_CODE_INSPECTION_REPORT.md  Dockerfile  Dockerfile.cloud  FINAGENT_STATUS.md  FINAL_INSPECTION_REPORT.md  LICENSE  README.md  claude_desktop_config_example.json  claude_mcp_config.json  config.env.cloud  config.env.example  docker-compose.yml  production_readiness_report.json  production_readiness_test.py  pyproject.toml  smithery.yaml  test_mcp_functionality.py  verify_setup.py
deploy/: cloud-run-deploy.sh
src/: __init__.py  __main__.py  auth.py  main.py  mcp_server.py  mcp_server_http.py  mcp_server_simple.py
src/agent/: __init__.py  wallet.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  config.py  exceptions.py  memory_utils.py  models.py  performance.py  security.py  utils.py
src/middleware/: security.py
src/services/: __init__.py  coinremitter.py  dia_oracle.py
tests/: test_mcp_integration.py
